Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].

* Verilog::Language 2.31****

****	Support parsing of signed numbers.  [Rudi Rughoonundon]

****    Fix Verilog::Getopt::get_parameters for NC-Verilog.

* Verilog::Language 2.310 2005/01/24

**	NEWS is now renamed Changes, to support CPAN indexing. [Offer Kaye]

**	Support Verilog 2001 ansi-style port declarations. [Rudi Rughoonundon]

**	Pins, nets, ports, and cells accessor methods now return lists
	rather then internal hash references.  This matches earlier
	documentation, and behavior of the pins_sorted, etc functions.

***	SigParser::module callback no longer gets list of ports, instead
	SigParser::port is called back on each port.

***	Add Verilog::GetOpt GCC -U<define> switch for undefining.

****	Support SUSE Linux and OS-X. [Jose Renau] 

* Verilog::Language 2.303 2004/11/18

***	Add vpm --nopli for stripping $pli calls. [Mike Lopresti]

* Verilog::Language 2.302 2004/11/10

****	Support Verilog 2001 named instantiation parameters. [Thomas Ziller]

* Verilog::Language 2.301 2004/10/26

****	Fix pod documentation errors. [Offer Kaye]

* Verilog::Language 2.300 2004/04/01

**	Added vppp preprocessor command.

**	Preprocessor is now Verilog 2001 and SystemVerilog 3.1 compliant.
	Adds arguments to defines, and `include <> syntax.

**	Added SystemVerilog 3.1 keywords to Verilog::Language

**	Added vrename --keywords and recursion on directory arguments.

***	Added to SigParser::module callback "$in_celldefine" 4th argument.
	Netlist::File sets $module->is_libcell() either if the file is a
	library or the module is within "`celldefine ... `endcelldefine".

***	Added to Verilog::Netlist (metacomment=>{ firstWord=>val, ... })
	argument.  For each comment that begins with at least two words,
	Verilog::SigParser calls back attribute() if the first word has a
	true value in %metacomment.
